Bug 1861811 - Hang on window open with many bookmarks in the toolbar or Other Bookmarks. r=daisuke,places-reviewers

The problem is due to reading tags per each bookmark, as unfortunately the
current tags layout is sub-optimal. For now we can either optimize for many
bookmarks or for many tags, as we know only few users use tags, and very few
have many of them (due to legacy add-ons), the only viable approach for now is
to pre-cache tags in the queries that are fetching many bookmarks.
In the future we should redesign the tags storage.

Differential Revision: https://phabricator.services.mozilla.com/D194506